--- a/css/style.css
+++ b/css/style.css
@@ -485,6 +485,56 @@ footer {
     font-family: 'Poppins', sans-serif;
     color: rgb(106, 255, 135);
 }
+@media only screen and (min-width: 768px) {
+  .edu-timeline::before {
+      content: '';
+      position: absolute;
+      height: 100%;
+      width: 2px;
+      background-color: rgb(106, 255, 135);
+      left: 50%;
+      transform: translate(-50%);
+  }
+  .edu-timeline ul li {
+      width: 50%;
+      margin-bottom: 50px;
+      position: relative;
+  }
+  .edu-timeline ul li:nth-child(odd) {
+      float: left;
+      clear: right;
+      transform: translateX(-30px);
+  }
+  .edu-timeline ul li:nth-child(even) {
+      float: right;
+      clear: left;
+      transform: translateX(30px);
+  }
+  .edu-timeline ul li::after {
+      content: '';
+      position: absolute;
+      height: 20px;
+      width: 20px;
+      background-color: rgb(106, 255, 135);
+      border-radius: 50%;
+      top: 0;
+  }
+  .edu-timeline ul li:nth-child(odd)::after {
+      right: -40px;
+      transform: translateX(50%, -50%);
+  }
+  .edu-timeline ul li:nth-child(even)::after {
+      left: -40px;
+      transform: translateX(-50%, -50%);
+  }
+  .edu-timeline ul li:hover::after {
+      background-color: white;
+  }
+  .edu-timeline-content .edu-date {
+      position: absolute;
+      top: -30px;
+  }
+}
 /* Profile Organization */
 .org-container {
     width: 100%;
@@ -544,6 +594,56 @@ footer {
     margin-top: 10px;
     margin-bottom: 70px;
     text-align: center;
+}
+@media only screen and (min-width: 768px) {
+  .org-timeline::before {
+      content: '';
+      position: absolute;
+      height: 100%;
+      width: 2px;
+      background-color: rgb(106, 255, 135);
+      left: 50%;
+      transform: translate(-50%);
+  }
+  .org-timeline ul li {
+      width: 50%;
+      margin-bottom: 50px;
+      position: relative;
+  }
+  .org-timeline ul li:nth-child(odd) {
+      float: left;
+      clear: right;
+      transform: translateX(-30px);
+  }
+  .org-timeline ul li:nth-child(even) {
+      float: right;
+      clear: left;
+      transform: translateX(30px);
+  }
+  .org-timeline ul li::after {
+      content: '';
+      position: absolute;
+      height: 20px;
+      width: 20px;
+      background-color: rgb(106, 255, 135);
+      border-radius: 50%;
+      top: 0;
+  }
+  .org-timeline ul li:nth-child(odd)::after {
+      right: -40px;
+      transform: translateX(50%, -50%);
+  }
+  .org-timeline ul li:nth-child(even)::after {
+      left: -40px;
+      transform: translateX(-50%, -50%);
+  }
+  .org-timeline ul li:hover::after {
+      background-color: white;
+  }
+  .org-timeline-content .org-date {
+      position: absolute;
+      top: -30px;
+  }
 }
 /* Dashboard */
 .dashboard-page {
@@ -930,7 +1030,7 @@ span.post-date {
   font-weight: 300;
   line-height: 24px;
   padding: 10px;
-  margin-bottom: 30px;
+  padding-bottom: 60px;
 }
 .answer p a {
   text-decoration: none;
@@ -971,7 +1071,7 @@ span.post-date {
   margin: 10px 0;
 }
 .answer figcaption:last-child {
-  margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 @media screen and (max-width: 786px) {
   .answer {
