--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ footer {
     background-position: center;
     background-size: cover;
     position: relative;
-    background-image: url(../resources/profile-picture-full.png);
+    background-image: url(../resources/profile-picture-background.png);
 }
 .profile-main-text-container {
     max-width: 200px;
@@ -436,6 +436,11 @@ footer {
     flex-direction: column;
   }
 }
+.org-title, .edu-title, .skill-title, .collage-title {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  text-align: center;
+}
 /* Profile Education */
 .edu-container {
     width: 100%;
@@ -542,11 +547,6 @@ footer {
     align-items: center;
     justify-content: center;
 }
-.org-title h2, .edu-title h2 {
-    margin-top: 20px;
-    margin-bottom: 40px;
-    text-align: center;
-}
 .org-timeline {
     width: 80%;
     height: auto;
@@ -644,6 +644,77 @@ footer {
       position: absolute;
       top: -30px;
   }
+}
+.skills-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 20%;
+}
+.skill {
+  position: relative;
+  margin-bottom: 20px;
+}
+.skill:last-child {
+  padding-bottom: 50px;
+}
+.skill-name {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+.skill-bar {
+  width: 100%;
+  background: rgba(221, 221, 221, 0.808);
+  height: 30px;
+  z-index: -1;
+  border-radius: 100px;
+  position: absolute;
+}
+.skill-fill {
+  background: rgb(106, 255, 135);
+  height: 30px;
+  border-radius: 100px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 30px;
+  overflow: hidden;
+}
+.skill-percent {
+  font-size: 20px;
+}
+.timemanagement {
+  width: 80%;
+}
+.creativethinking {
+  width: 80%;
+}
+.communication {
+  width: 70%;
+}
+.teamwork {
+  width: 75%;
+}
+.leadership {
+  width: 80%;
+}
+.collage-container {
+  /* position: absolute; */
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 300px));
+  column-gap: 10px;
+  row-gap: 10px;
+  padding-bottom: 50px;
+}
+.collage-container img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  object-position: center;
+  border: solid white;
 }
 /* Dashboard */
 .dashboard-page {
@@ -791,27 +862,6 @@ footer {
   color: black;
   margin: auto;
   height: 9;
-}
-@media screen and (max-width: 786px) {
-  .nbsa-study-cards {
-    width: 60%;
-    margin-bottom: 30px;
-  }
-  .nbsa-study-cards-progress {
-    background: rgb(106, 255, 135);
-    width: 10%;
-    border-radius: 1rem;
-    position: relative;
-    overflow: hidden;
-  }
-  .nbsa-study-cards-progress::after {
-    content: '';
-    width: 10%;
-    height: 100%;
-    background-color: rgba(221, 221, 221, 0.808);
-    position: absolute;
-    left: 0%;
-  }
 }
 @media screen and (max-width: 576px) {
   .nbsa-study-cards {
@@ -1072,27 +1122,6 @@ span.post-date {
 }
 .answer figcaption:last-child {
   padding-bottom: 50px;
-}
-@media screen and (max-width: 786px) {
-  .answer {
-    width: 60%;
-    margin: auto;
-    text-align: center;
-    padding-top: 40px;
-  }
-  .answer-row {
-    margin-top: 5px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-  }
-  .answer-title h1 {
-    font-size: 60px;
-    font-weight: bold;
-    font-family: 'Poppins', sans-serif;
-    line-height: 55px;
-    padding-top: 25%;
-  }
 }
 @media screen and (max-width: 576px) {
   .answer {
