--- a/css/style.css
+++ b/css/style.css
@@ -1149,6 +1149,11 @@ span.post-date {
 .ict-fow-image {
   width: 400px;
 }
+@media screen and (max-width: 576px) {
+  .ict-fow-image {
+    width: 300px;
+  }
+}
 /* SWOT */
 .swot {
   display: flex;
