--- a/css/style.css
+++ b/css/style.css
@@ -1194,6 +1194,7 @@ span.post-date {
   background-color: rgb(106, 255, 135);
   margin: 10px;
 }
+/*  */
 .others h1 {
   width: 100%;
   align-items: center;
